# py-fastAPI-boilerplate

./: .env.example  .gitignore  AGENTS.md  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  alembic.ini  design.md  docker-compose.yml  docker-setup.md  pyproject.toml  requirements.txt  run.py  simple_init.py  test_setup.py
alembic/: env.py
alembic/versions/: 2026_03_13_1941-158db9bb51ea_add_task_domain.py  2026_03_13_2010-73dbf084dee3_create_task_table.py
scripts/: init_db.py
src/: __init__.py  config.py  database.py  exceptions.py  main.py  middleware.py
src/auth/: __init__.py  config.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
src/products/: __init__.py  models.py  router.py  schemas.py  service.py
src/tasks/: __init__.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py
tests/products/: __init__.py  test_products.py
tests/tasks/: __init__.py  test_tasks.py
